# torch_learn

./: .env  .gitattributes  BUGGY_README.md  Dockerfile.vulnerable  README.md  SECURITY.md  pyproject.toml  vulnerable_requirements.txt
.github/workflows/: security-scan.yml
explain/: 00_pytorch_core_components_explanation.md  01_logistic_explanation.md  01_pytorch_implementation_patterns_explanation.md  02_flc_mlp_explanation.md  03_autoencoder_explanation.md  05_cnn_explanation.md  05_vgg_explanation.md  resnet_architecture.py
export/: .env  .envrc  README.md  env_test.sh  example.py  main.py  process_test.py  process_test.sh  run.sh
learn/: 00_pytorch_core_components.py  01_logistic.py  01_pytorch_implementation_patterns.py  02_flc_mlp.py  03_autoencoder.py  03_flc_mlp.py  05_cnn.py  05_vgg.py  07_resnet.py  buggy_pytorch_example.py  critical_bugs.py  problematic_config.py
notebook/: 00_pytorch_core_components.ipynb  01_pytorch_implementation_patterns.ipynb  02_logistic.ipynb
